# cursor-api

./: .env.example  .gitattributes  .gitignore  .license-compliance  .rustfmt.toml  Cargo.toml  Cross.toml  Cursor API.md  Deno.ts  Dockerfile  Dockerfile.cross  Dockerfile.cross.arm64  LICENSE  LICENSE-MIT  README.md  build.rs  build_info.rs  q.txt  rustfmt.toml  serve.ts  start_instruction  worker.js
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build-darwin.yml  build-linux.yml  build.yml  docker.yml
patch/chrono-0.4.41/: Cargo.toml
patch/chrono-0.4.41/src/: date.rs  lib.rs  month.rs  time_delta.rs  weekday.rs
patch/chrono-0.4.41/src/datetime/: mod.rs  serde.rs  tests.rs
patch/chrono-0.4.41/src/format/: parse.rs
patch/chrono-0.4.41/src/naive/: isoweek.rs
patch/chrono-0.4.41/src/naive/date/: mod.rs
patch/chrono-0.4.41/src/naive/datetime/: mod.rs
patch/chrono-0.4.41/src/naive/time/: mod.rs
patch/chrono-0.4.41/src/offset/: fixed.rs  mod.rs  utc.rs
patch/chrono-0.4.41/src/offset/local/: mod.rs
patch/chrono-0.4.41/src/offset/local/tz_info/: timezone.rs
patch/dotenvy-0.15.7/: Cargo.toml
patch/dotenvy-0.15.7/src/: iter.rs  lib.rs
patch/h2-0.4.10/src/hpack/: header.rs
patch/h2-0.4.10/src/proto/streams/: store.rs
patch/reqwest-0.12.18/: Cargo.toml
patch/reqwest-0.12.18/src/: connect.rs  lib.rs  tls.rs
patch/reqwest-0.12.18/src/async_impl/: client.rs
patch/rustls-0.23.27/: Cargo.toml
patch/rustls-0.23.27/src/: lib.rs
patch/rustls-0.23.27/src/client/: hs.rs
patch/rustls-0.23.28/: Cargo.toml
patch/rustls-0.23.28/src/: lib.rs
patch/rustls-0.23.28/src/client/: ech.rs  fingerprint.rs  hs.rs
patch/rustls-0.23.31/src/client/: hs.rs
patch/rustls-0.23.31/src/msgs/: handshake.rs
patch/ulid-1.2.1/: Cargo.toml
patch/ulid-1.2.1/src/: base32.rs  lib.rs
scripts/: build.ps1  build.sh  minify.js  package-lock.json  package.json  setup.ps1  setup.sh
src/: app.rs  chat.rs  common.rs  cursor.rs  leak.rs  lib.rs  main.rs  message.rs  models.rs  natural_args.rs
src/aiserver/: v1.rs
src/app/: client.rs  config.rs  constant.rs  lazy.rs  model.rs  models.rs  statics.rs  token.rs  utils.rs
src/app/constant/: header.rs  status.rs
src/app/constant/header/: version.rs
src/app/lazy/: log.rs
src/app/model/: alias.rs  build_key.rs  checksum.rs  config.rs  cpp.rs  fetch_model.rs  hash.rs  log.rs  proxies.rs  proxy.rs  proxy_pool.rs  state.rs  timestamp_header.rs  token.rs  tz.rs  usage_check.rs  validity_range.rs  vision_ability.rs
src/app/model/proxy_pool/: proxy_url.rs
src/app/model/state/: log.rs  page.rs  token.rs
src/app/model/token/: cache.rs  provider.rs
src/app/models/: usage_check.rs
src/app/prompts/: Claude 3 Haiku  Claude 3 Opus  Claude 3.5 Sonnet Text and images  Claude 3.5 Sonnet Text only  Claude 3.7 Sonnet
src/app/utils/: checksum.rs
src/chat/: adapter.rs  config.rs  constant.rs  error.rs  model.rs  models.rs  route.rs  service.rs  stream.rs
src/chat/aiserver/: v1.rs
src/chat/aiserver/v1/: aiserver.proto  aiserver.v1.rs  lite.proto
src/chat/config/: key.proto
src/chat/constant/: models.rs
src/chat/middleware/: auth.rs
src/chat/route/: api.rs  checksum.rs  config.rs  health.rs  logs.rs  profile.rs  proxies.rs  token.rs  tokens.rs  usage.rs
src/chat/stream/: decoder.rs
src/common/: client.rs  impls.rs  model.rs  models.rs  time.rs  utils.rs
src/common/model/: config.rs  error.rs  health.rs  token.rs  tri.rs  userinfo.rs
src/common/model/userinfo/: payment_id.rs  subscription_status.rs
src/common/models/: config.rs  health.rs  usage.rs  userinfo.rs
src/common/utils/: base62.rs  base64.rs  checksum.rs  duration_fmt.rs  hex.rs  string_builder.rs  token.rs  tokens.rs
src/core/: adapter.rs  config.rs  constant.rs  error.rs  middleware.rs  model.rs  route.rs  service.rs  stream.rs
src/core/adapter/: anthropic.rs  openai.rs
src/core/aiserver/: v1.rs
src/core/aiserver/v1/: aiserver.v1.rs  lite.proto
src/core/config/: key.proto  key.rs
src/core/constant/: display_name.rs
src/core/constant/display_name/: formatter.rs  parser.rs  tokenizer.rs
src/core/error/: canonical.rs  cursor.rs
src/core/middleware/: auth.rs
src/core/model/: anthropic.rs  openai.rs  parser.rs  resolver.rs
src/core/route/: checksum.rs  gen.rs  health.rs  logs.rs  page.rs  profile.rs  proxies.rs  token.rs  tokens.rs  userinfo.rs
src/core/service/: cpp.rs
src/core/stream/: decoder.rs  droppable.rs  processor.rs
src/core/stream/decoder/: cpp.rs  direct.rs  types.rs  utils.rs
src/core/stream/processor/: openai.rs
src/cursor/: adapter.rs  constant.rs  error.rs  model.rs  route.rs  service.rs
src/cursor/aiserver/: v1.rs
src/cursor/aiserver/v1/: aiserver.v1.rs
src/cursor/route/: health.rs  logs.rs  page.rs  profile.rs  proxies.rs  token.rs  tokens.rs
src/cursor/stream/: decoder.rs
src/leak/: arc.rs  manually_init.rs
static/: api.html  build_key.html  config.html  logs.html  proxies.html  readme.html  shared-styles.css  shared.js  tokeninfo.html  tokens.html
tests/data/: stream_data.txt
tools/get-token/: Cargo.toml
tools/get-token/src/: main.rs
tools/next_reload/: Cargo.toml
tools/next_reload/src/: main.rs
tools/reset-telemetry/: Cargo.toml
tools/reset-telemetry/src/: main.rs
tools/rkyv_adapter/src/: main.rs
tools/set-token/: Cargo.toml
tools/set-token/src/: main.rs
