[package]
name = "get-token"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0"
# rusqlite = { version = "0.32.1", default-features = false, features = ["bundled"] }
rusqlite = "0"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
