[package]
name = "reset-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
serde_json = "1.0.137"
sha2 = { version = "0.10.8", default-features = false }
uuid = { version = "1.12.1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
